fix safari button alignment

--- a/citi.scss
+++ b/citi.scss
@@ -2599,7 +2599,14 @@ footer {
   }
 
   #page-top:not(.single-post) .featured-category .column-view-item > .post .thumb-meta-wrapper {
-    height: auto !important;
+    flex: 1;
+    display: flex;
+    max-height: 100%;
+  }
+
+  #page-top .featured-category .carousel .post .thumb-meta-wrapper .tile-text-area .tile-header-ellipsis.post-details-activate .post-details-icon {
+    max-height: max-content;
+    margin-top: auto;
   }
 }
 
